<resources>
    <string name="app_name">labo2</string>
    <string name="part_1">Part 1</string>
    <string name="part_2">Part 2</string>
    <string name="part_3">Part 3</string>
    <string name="back">BACK</string>
    <string name="close">CLOSE</string>
    <string name="next">NEXT</string>
    <string name="fragment_number">Fragment number %1$d</string>
    <string name="visit_our_github">Visit our GitHub</string>
    <string name="timoth_e_van_hove">Timothée Van Hove</string>
    <string name="felix_breval">Felix Breval</string>
    <string name="anthony_david">Anthony David</string>
    <string name="labo_2">Labo 2</string>
    <string name="heig_daa">HEIG - DAA</string>
    <string name="group_members">Group members:</string>
    <string name="main_welcome_message_anonymous"> Bienvenue, veuillez entrer un nom </string>
    <string name="main_welcome_message"> Bienvenue %s !</string>
    <string name="editer">EDITER</string>
    <string name="sauver">SAUVER</string>
    <string name="entrez_votre_nom">Entrez votre nom</string>
    <string name="image_representing_a_question_mark">Image representing a question mark</string>
    <string name="application_logo">Application logo</string>
    <string name="group_member_3_image">group member 3 image</string>
    <string name="group_member_2_image">group member 2 image</string>
    <string name="group_member_1_image">group member 1 image</string>
    <string name="increment">Increment</string>
    <string name="mycounterfragment">MyCounterFragment</string>
</resources>